Add timeline visuals and accordion interaction

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,30 +8,25 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&family=Roboto:wght@400;500&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div id="app">
         <header>
             <h1>東京 - 長野賞櫻之旅</h1>
             <p class="subtitle">2026/3/28 - 4/5</p>
         </header>
-        
+
         <main>
             <div id="schedule-container">
                 <!-- Schedule items will be injected here -->
             </div>
         </main>
-
-        <div id="modal" class="modal hidden">
-            <div class="modal-content">
-                <span class="close-button">&times;</span>
-                <div id="modal-body">
-                    <!-- Detail content will be injected here -->
-                </div>
-            </div>
-        </div>
     </div>
     <script src="app.js"></script>
 </body>
+
 </html>
